feat: implement recipe import via share sheet and clean up codebase
This commit introduces the ability to import recipes by sharing a URL to the app.

- Add intent filter for `ACTION_SEND` to handle shared text (URLs).
- Implement `RecipeImportRepository` and `RecipeImportViewModel` to manage the import process.
- Update `MainActivity` to handle the share intent, display toasts on import status, and add a splash screen.
- Add new launcher icons and splash screen theme.
- Update Gradle version and dependencies.
- Refactor and remove a significant amount of unused code, components, and resources.
- Switch logging to use Timber.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Mealier"
+        android:theme="@style/Theme.App.Starting"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
@@ -25,6 +25,11 @@
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.SEND" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:mimeType="text/plain" />
             </intent-filter>
         </activity>
     </application>
